--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2006-02-08  Martin Baulig  <martin@ximian.com>
+
+	* backends/server/i386-arch.c: Use `guint32' instead of `long'
+	everywhere to correctly handle "negative" values.
+
 2006-02-02  Martin Baulig  <martin@ximian.com>
 
 	* frontend/Command.cs
