2006-02-28  Martin Baulig  <martin@ximian.com>
	* backends/TargetAccess.cs
	(TargetAccess.DisassembleInstruction): Removed.
	(TargetAccess.DisassembleMethod): Removed.


svn path=/trunk/debugger/; revision=57377

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,12 @@
 2006-02-28  Martin Baulig  <martin@ximian.com>
 
 	* backends/TargetAccess.cs
+	(TargetAccess.DisassembleInstruction): Removed.
+	(TargetAccess.DisassembleMethod): Removed.
+
+2006-02-28  Martin Baulig  <martin@ximian.com>
+
+	* backends/TargetAccess.cs
 	(TargetAccess.InsertBreakpoint): Removed.
 	(TargetAccess.RemoveBreakpoint): Removed.
 	(TargetAccess.AddEventHandler): Removed.
