--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2006-04-01  Martin Baulig  <martin@ximian.com>
+
+	* backends/ProcessStart.cs
+	(ProcessStart.SetupEnvironment): Set `MONO_SHARED_HOSTNAME=mdb'.
+
 2006-03-29  Martin Baulig  <martin@ximian.com>
 
 	* backends/Debugger.cs
