2006-04-03  Martin Baulig  <martin@ximian.com>
	* backends/server/breakpoints.c
	(mono_debugger_breakpoint_manager_clone): New public function.


svn path=/trunk/debugger/; revision=58924

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2006-04-03  Martin Baulig  <martin@ximian.com>
+
+	* backends/server/breakpoints.c
+	(mono_debugger_breakpoint_manager_clone): New public function.
+
 2006-04-02  Martin Baulig  <martin@ximian.com>
 
 	* backends/server/breakpoints.h
