--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2006-04-03  Martin Baulig  <martin@ximian.com>
 
+	* classes/Breakpoint.cs (Breakpoint): Implement ICloneable.
+	(Breakpoint.Clone): New public method.
+
+2006-04-03  Martin Baulig  <martin@ximian.com>
+
 	* backends/server/breakpoints.c
 	(mono_debugger_breakpoint_manager_clone): New public function.
 
