2006-04-05  Martin Baulig  <martin@ximian.com>
	* wrapper/: Renamed to `build'.


svn path=/trunk/debugger/; revision=59071

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,9 @@
 2006-04-05  Martin Baulig  <martin@ximian.com>
 
+	* wrapper/: Renamed to `build'.
+
+2006-04-05  Martin Baulig  <martin@ximian.com>
+
 	* frontend/Command.cs (DebuggerEngine.ctor): Register all the
 	commands here.
 
