--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2006-04-06  Martin Baulig  <martin@ximian.com>
+
+	* frontend/Interpreter.cs
+	(Interpreter): Implement `IDisposable'.
+
 2006-04-05  Martin Baulig  <martin@ximian.com>
 
 	* wrapper/: Renamed to `build'.
