--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2006-04-07  Martin Baulig  <martin@ximian.com>
+
+	* test/: Clean up this directory a bit.
+
+	* test/mono-debugger.tests/: Removed.
+	* test/mdb.exp: Removed.
+
 2006-04-06  Martin Baulig  <martin@ximian.com>
 
 	* frontend/CL.cs (Engine.ctor): Take an `Interpreter' argument.
