--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2006-04-07  Martin Baulig  <martin@ximian.com>
 
+	* backends/server/x86-ptrace.c (server_ptrace_spawn): Set the
+	child's core-file limit to zero after forking.
+
+2006-04-07  Martin Baulig  <martin@ximian.com>
+
 	* backends/server/x86-ptrace.c
 	(io_thread): Fix a very old race condition: keep our data in a
 	separate `IOThreadData' structure since the inferior could have
